# animescore

./: .gitignore  README.md  pyproject.toml
animescore/: __init__.py  _audio.py  metrics.py  predictor.py  ranknet_model.py
data/: README.md
data/annotator/: README.md  annotator_profiles.csv
data/pairs/: README.md  pair_eval_metadata_without_coconut.csv  pair_test_metadata.csv  pair_train_metadata.csv  pair_train_metadata_without_coconut.csv
data/utterance_set/: README.md  pair_eval_utterance_metadata_without_coconut.csv  pair_pool_metadata_without_coconut.csv  test_metadata.csv  train_metadata.csv
dataset/: README.md  setup_dataset.sh
model/: README.md  eval_ranknet.sh  eval_ranknet_ckpt_v2.py  eval_ranknet_without_coconut.sh  metrics.py  requirements.txt  train_ranknet.sh  train_ranknet_v2.py  train_ranknet_without_coconut.sh
model/datasets/: pairwise_dataset.py
model/src/: metrics.py  ssl_encoder.py
scripts/: build_without_coconut_dataset.py  download_without_coconut_sources.sh  prepare_without_coconut_audio.py  run_sidon_restore.py
