[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "animescore"
version = "0.1.0"
description = "AnimeScore: A Preference-Based Dataset and Framework for Evaluating Anime-Like Speech Style"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "huggingface-hub>=1.3.0",
    "soundfile>=0.13.1",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "transformers>=4.35.0",
]

[project.optional-dependencies]
training = [
    "numpy>=1.24.0",
    "pandas>=1.5.0",
    "scikit-learn>=1.2.0",
    "scipy>=1.10.0",
    "statsmodels>=0.14.0",
    "tqdm>=4.65.0",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchaudio = [{ index = "pytorch-cu128" }]

[tool.setuptools.packages.find]
include = ["animescore*"]
